tests/ui/feature-gates/issue-43106-gating-of-builtin-attrs-error.stderr
error: `#[macro_export]` attribute cannot be used on crates
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:9:1
   |
LL | #![macro_export]
   | ^^^^^^^^^^^^^^^^
   |
   = help: `#[macro_export]` can only be applied to macro defs

error[E0658]: use of an internal attribute
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:11:1
   |
LL | #![rustc_main]
   | ^^^^^^^^^^^^^^
   |
   = help: add `#![feature(rustc_attrs)]` to the crate attributes to enable
   = note: the `#[rustc_main]` attribute is an internal implementation detail that will never be stable
   = note: the `#[rustc_main]` attribute is used internally to specify test entry point function

error: `#[rustc_main]` attribute cannot be used on crates
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:11:1
   |
LL | #![rustc_main]
   | ^^^^^^^^^^^^^^
   |
   = help: `#[rustc_main]` can only be applied to functions

error: `#[repr()]` attribute cannot be used on crates
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:16:1
   |
LL | #![repr()]
   | ^^^^^^^^^^
   |
   = help: `#[repr()]` can only be applied to data types

error: `#[path]` attribute cannot be used on crates
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:20:1
   |
LL | #![path = "3800"]
   | ^^^^^^^^^^^^^^^^^
   |
   = help: `#[path]` can only be applied to modules

error: `#[automatically_derived]` attribute cannot be used on crates
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:22:1
   |
LL | #![automatically_derived]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[automatically_derived]` can only be applied to trait impl blocks

error: `#[no_link]` attribute cannot be used on crates
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:30:1
   |
LL | #![no_link]
   | ^^^^^^^^^^^
   |
   = help: `#[no_link]` can only be applied to extern crates

error: `#[export_name]` attribute cannot be used on crates
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:32:1
   |
LL | #![export_name = "2200"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[export_name]` can be applied to functions and statics

error: `#[inline]` attribute cannot be used on crates
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:35:1
   |
LL | #![inline]
   | ^^^^^^^^^^
   |
   = help: `#[inline]` can only be applied to functions

error: `#[inline]` attribute cannot be used on modules
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:37:1
   |
LL | #[inline]
   | ^^^^^^^^^
   |
   = help: `#[inline]` can only be applied to functions

error: `#[inline]` attribute cannot be used on modules
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:40:17
   |
LL |     mod inner { #![inline] }
   |                 ^^^^^^^^^^
   |
   = help: `#[inline]` can only be applied to functions

error: `#[inline]` attribute cannot be used on structs
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:49:5
   |
LL |     #[inline] struct S;
   |     ^^^^^^^^^
   |
   = help: `#[inline]` can only be applied to functions

error: `#[inline]` attribute cannot be used on type aliases
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:52:5
   |
LL |     #[inline] type T = S;
   |     ^^^^^^^^^
   |
   = help: `#[inline]` can only be applied to functions

error: `#[inline]` attribute cannot be used on inherent impl blocks
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:55:5
   |
LL |     #[inline] impl S { }
   |     ^^^^^^^^^
   |
   = help: `#[inline]` can only be applied to functions

error: `#[no_link]` attribute cannot be used on modules
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:59:1
   |
LL | #[no_link]
   | ^^^^^^^^^^
   |
   = help: `#[no_link]` can only be applied to extern crates

error: `#[no_link]` attribute cannot be used on modules
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:62:17
   |
LL |     mod inner { #![no_link] }
   |                 ^^^^^^^^^^^
   |
   = help: `#[no_link]` can only be applied to extern crates

error: `#[no_link]` attribute cannot be used on functions
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:65:5
   |
LL |     #[no_link] fn f() {
   |     ^^^^^^^^^^
   |
   = help: `#[no_link]` can only be applied to extern crates

error: `#[no_link]` attribute cannot be used on structs
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:75:5
   |
LL |     #[no_link]
   |     ^^^^^^^^^^
   |
   = help: `#[no_link]` can only be applied to extern crates

error: `#[no_link]` attribute cannot be used on type aliases
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:84:5
   |
LL |     #[no_link]type T = S;
   |     ^^^^^^^^^^
   |
   = help: `#[no_link]` can only be applied to extern crates

error: `#[no_link]` attribute cannot be used on inherent impl blocks
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:87:5
   |
LL |     #[no_link] impl S { }
   |     ^^^^^^^^^^
   |
   = help: `#[no_link]` can only be applied to extern crates

error: `#[export_name]` attribute cannot be used on modules
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:96:1
   |
LL | #[export_name = "2200"]
   | ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[export_name]` can be applied to functions and statics

error: `#[export_name]` attribute cannot be used on modules
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:99:17
   |
LL |     mod inner { #![export_name="2200"] }
   |                 ^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[export_name]` can be applied to functions and statics

error: `#[export_name]` attribute cannot be used on structs
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:104:5
   |
LL |     #[export_name = "2200"] struct S;
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[export_name]` can be applied to functions and statics

error: `#[export_name]` attribute cannot be used on type aliases
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:107:5
   |
LL |     #[export_name = "2200"] type T = S;
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[export_name]` can be applied to functions and statics

error: `#[export_name]` attribute cannot be used on inherent impl blocks
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:110:5
   |
LL |     #[export_name = "2200"] impl S { }
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[export_name]` can be applied to functions and statics

error: `#[export_name]` attribute cannot be used on required trait methods
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:114:9
   |
LL |         #[export_name = "2200"] fn foo();
   |         ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[export_name]` can be applied to functions with a body and statics

error: `#[repr(C)]` attribute cannot be used on modules
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:121:1
   |
LL | #[repr(C)]
   | ^^^^^^^^^^
   |
   = help: `#[repr(C)]` can only be applied to data types

error: `#[repr(C)]` attribute cannot be used on modules
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:124:17
   |
LL |     mod inner { #![repr(C)] }
   |                 ^^^^^^^^^^^
   |
   = help: `#[repr(C)]` can only be applied to data types

error: `#[repr(C)]` attribute cannot be used on functions
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:127:5
   |
LL |     #[repr(C)] fn f() { }
   |     ^^^^^^^^^^
   |
   = help: `#[repr(C)]` can only be applied to data types

error: `#[repr(C)]` attribute cannot be used on type aliases
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:132:5
   |
LL |     #[repr(C)] type T = S;
   |     ^^^^^^^^^^
   |
   = help: `#[repr(C)]` can only be applied to data types

error: `#[repr(C)]` attribute cannot be used on inherent impl blocks
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:135:5
   |
LL |     #[repr(C)] impl S { }
   |     ^^^^^^^^^^
   |
   = help: `#[repr(C)]` can only be applied to data types

error: `#[repr(Rust)]` attribute cannot be used on modules
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:140:1
   |
LL | #[repr(Rust)]
   | ^^^^^^^^^^^^^
   |
   = help: `#[repr(Rust)]` can only be applied to data types

error: `#[repr(Rust)]` attribute cannot be used on modules
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:143:17
   |
LL |     mod inner { #![repr(Rust)] }
   |                 ^^^^^^^^^^^^^^
   |
   = help: `#[repr(Rust)]` can only be applied to data types

error: `#[repr(Rust)]` attribute cannot be used on functions
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:146:5
   |
LL |     #[repr(Rust)] fn f() { }
   |     ^^^^^^^^^^^^^
   |
   = help: `#[repr(Rust)]` can only be applied to data types

error: `#[repr(Rust)]` attribute cannot be used on type aliases
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:151:5
   |
LL |     #[repr(Rust)] type T = S;
   |     ^^^^^^^^^^^^^
   |
   = help: `#[repr(Rust)]` can only be applied to data types

error: `#[repr(Rust)]` attribute cannot be used on inherent impl blocks
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:154:5
   |
LL |     #[repr(Rust)] impl S { }
   |     ^^^^^^^^^^^^^
   |
   = help: `#[repr(Rust)]` can only be applied to data types

warning: `#[no_mangle]` attribute may not be used in combination with `#[export_name]`
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:24:1
   |
LL | #![no_mangle]
   | ^^^^^^^^^^^^^ `#[no_mangle]` is ignored
   |
note: `#[export_name]` takes precedence
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:32:1
   |
LL | #![export_name = "2200"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   = note: requested on the command line with `-W unused-attributes`
help: remove the `#[no_mangle]` attribute
   |
LL - #![no_mangle]
   |

error: valid forms for the attribute are `#[inline(always)]`, `#[inline(never)]`, and `#[inline]`
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:43:5
   |
LL |     #[inline = "2100"] fn f() { }
   |     ^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #57571 <https://github.com/rust-lang/rust/issues/57571>
   = note: `#[deny(ill_formed_attribute_input)]` (part of `#[deny(future_incompatible)]`) on by default

warning: `#[no_link]` attribute cannot be used on match arms
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:68:13
   |
LL |             #[no_link]
   |             ^^^^^^^^^^
   |
   = help: `#[no_link]` can only be applied to extern crates
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!

warning: `#[no_link]` attribute cannot be used on struct fields
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:78:9
   |
LL |         #[no_link]
   |         ^^^^^^^^^^
   |
   = help: `#[no_link]` can only be applied to extern crates
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!

warning: `#[no_link]` attribute cannot be used on macro defs
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:90:5
   |
LL |     #[no_link]
   |     ^^^^^^^^^^
   |
   = help: `#[no_link]` can only be applied to extern crates
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!

warning: unused attribute
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:16:1
   |
LL | #![repr()]
   | ^^^^^^^^^^ help: remove this attribute
   |
   = note: using `repr` with an empty list has no effect

warning: `#[no_mangle]` attribute cannot be used on crates
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:24:1
   |
LL | #![no_mangle]
   | ^^^^^^^^^^^^^
   |
   = help: `#[no_mangle]` can be applied to functions and statics
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!

error: aborting due to 37 previous errors; 6 warnings emitted

For more information about this error, try `rustc --explain E0658`.
Future incompatibility report: Future breakage diagnostic:
error: valid forms for the attribute are `#[inline(always)]`, `#[inline(never)]`, and `#[inline]`
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:43:5
   |
LL |     #[inline = "2100"] fn f() { }
   |     ^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #57571 <https://github.com/rust-lang/rust/issues/57571>
   = note: `#[deny(ill_formed_attribute_input)]` (part of `#[deny(future_incompatible)]`) on by default

